examples/test/testpolicy16892.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16892
  namespace: namespace27
spec:
  podSelector:
    matchLabels:
      key47: value38
      key40: value37
      key41: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value25
      podSelector:
        matchLabels:
          key37: value34
          key32: value40
          key22: value26
